@@ -1,6 +1,8 @@
 2013-01-02 (unreleased) Robin Gareus <robin@gareus.org>
 * add support for JSON output
 * separate format (-f) and unit (-u) options.
+* fix off-by-one error in holdoff compensation
+* always end with a "Sound off"
 
 2012-12-30 (v0.2.0) Robin Gareus <robin@gareus.org>
 * change default output format to seconds
